# QuarkA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: blockchain_optimization.py  model_compression.py
quark_py/: __init__.py  circuit.py  compression.py  consensus.py  encoding.py  optimizer.py
quarka/: __init__.py  circuit.py  compression.py  consensus.py  encoding.py  optimizer.py
tests/: test_circuit.py  test_compression.py  test_encoding.py  test_optimizer.py
