[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

# MANIFEST.in
include LICENSE
include README.md
include requirements.txt
recursive-include examples *.py
recursive-include tests *.py